CSS tweaks: made font smaller to avoid videos making the page overflow.

--- a/Stylesheets/profiles/otapages/epub/ota.css
+++ b/Stylesheets/profiles/otapages/epub/ota.css
@@ -9,9 +9,10 @@ ePub Texts from OTA
 body{
    color: #000000;
    background-color: #FFFFFF;
-   padding: 40px;
+   padding: 80px;
+   margin: 0 auto;
    font-family: Verdana, Tahoma, Geneva, Arial, Helvetica, sans-serif;
-   font-size: 28pt;
+   font-size: 26pt;
 }
 
 
@@ -700,6 +701,5 @@ span.invisible {
 }
 
 video {
-	width: 400px;
 	float: right;
 }
